Spacing fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C1049976

--- a/ebookStylesheets/css/document.css
+++ b/ebookStylesheets/css/document.css
@@ -350,7 +350,8 @@ td:last-of-type {
   margin: 0;
 }
 
-.list_item > .name_block {
+.list_item > .name_block,
+.publication > .publication_body > .chapter > .chapter_body > .section_block > .section > .section_body > .feature_para_block > .name_block {
   display: inline;
 }
 
@@ -393,6 +394,11 @@ td:last-of-type {
 
 .publication .publication_body .part .part_body .chapter .chapter_body .analytical_level .analytical_level_body .section_block .section .section_body .list .list_item .para {
   display: block;
+}
+
+.publication > .publication_body > .chapter > .chapter_body > .section_block > .section > .section_body > .feature_para_block > .para {
+  display: inline-block;
+  margin-left: 1em;
 }
 
 .section_body > .para > .list {
@@ -474,6 +480,10 @@ td:last-of-type {
 
 .feature_para_block {
   margin: 1em;
+}
+
+.publication > .publication_body > .chapter > .chapter_body > .section_block > .section > .section_body > .feature_para_block {
+  margin-left: 2em;
 }
 
 .xentry * {
@@ -1071,31 +1081,27 @@ tbody .cgt,
   text-align: center;
 }
 
-.INDEX {
-  margin-top: 1em;
-}
-
-.INDEX .l2, .INDEX .l3, .INDEX .l4 {
+.l2, .l3, .l4 {
   margin-left: 1em;
 }
 
-.INDEX .CITE {
+.CITE {
   display: inline;
 }
 
-.INDEX .mte2 .linebreak + span {
+.mte2 .linebreak + span {
   margin-left: 1em;
 }
 
-.INDEX .l2 .mte2 {
+.l2 .mte2 {
   margin-left: -1em;
 }
 
-.INDEX .l3 .mte2 {
+.l3 .mte2 {
   margin-left: -2em;
 }
 
-.INDEX .l4 .mte2 {
+.l4 .mte2 {
   margin-left: -3em;
 }
 
